Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_cw2multimediaapp.yml
+++ b/.github/workflows/main_cw2multimediaapp.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - CW2MultimediaApp
+name: Build and deploy ASP.Net Core app to Azure Web App - CW2MultimediaApp
 
 on:
   push:
@@ -11,32 +11,32 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v4
         with:
-          node-version: '24.x'
+          dotnet-version: '8.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -46,16 +46,16 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: .net-app
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A9A8E2D4D4854AF2B0636AFA851C967E }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_95F4A90265E3491C861222F2B2CE9152 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2E31796D32454D42846483C676ABD78E }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B80C4400691B4F7A910D724AD768D2C1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6ACF1D12F1F94DC384C416C2974C7D80 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E12092AEB9D54012A4B41B7CBA2E140D }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
